# kakaotalk-tablet-patcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: downloader.rs  main.rs  patcher.rs  update.rs
src/gplay/: api.rs  auth.rs  mod.rs  protobuf.rs
